# LazyMatrix

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
docs/html/: README_8md.html  annotated.html  augment__columns_8hpp.html  augment__columns_8hpp__dep__incl.map  augment__columns_8hpp__dep__incl.md5  augment__columns_8hpp__incl.map  augment__columns_8hpp__incl.md5  augment__columns_8hpp_source.html  augment__columns__view_8hpp.html  augment__columns__view_8hpp__dep__incl.map  augment__columns__view_8hpp__dep__incl.md5  augment__columns__view_8hpp__incl.map  augment__columns__view_8hpp__incl.md5  augment__columns__view_8hpp_source.html  augment__rows_8hpp.html  augment__rows_8hpp__dep__incl.map  augment__rows_8hpp__dep__incl.md5  augment__rows_8hpp__incl.map  augment__rows_8hpp__incl.md5  augment__rows_8hpp_source.html  augment__rows__view_8hpp.html  augment__rows__view_8hpp__dep__incl.map  augment__rows__view_8hpp__dep__incl.md5  augment__rows__view_8hpp__incl.map  augment__rows__view_8hpp__incl.md5  augment__rows__view_8hpp_source.html  base__matrix3d_8hpp.html  base__matrix3d_8hpp__dep__incl.map  base__matrix3d_8hpp__dep__incl.md5  base__matrix3d_8hpp__incl.map  base__matrix3d_8hpp__incl.md5  base__matrix3d_8hpp_source.html  base__matrix_8hpp.html  base__matrix_8hpp__dep__incl.map  base__matrix_8hpp__dep__incl.md5  base__matrix_8hpp__incl.map  base__matrix_8hpp__incl.md5  base__matrix_8hpp_source.html  border__functor_8hpp.html  border__functor_8hpp__dep__incl.map  (+943 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_a.js  (+39 more)
include/: augment_columns.hpp  augment_columns_view.hpp  augment_rows.hpp  augment_rows_view.hpp  base_matrix.hpp  base_matrix3d.hpp  border_functor.hpp  border_functor_view.hpp  channel.hpp  circular_iterator.hpp  color.hpp  convert_numbers.hpp  csv_matrix.hpp  data_sampling.hpp  database_matrix.hpp  database_matrix2.hpp  diff.hpp  downsampling.hpp  eigen_wrapper.hpp  eigen_wrappers.hpp  element_by_element_binary_expression.hpp  element_by_element_unary_expression.hpp  fft.hpp  files.hpp  filters.hpp  image_matrix.hpp  interval.hpp  lazy_matrix.hpp  matrix.hpp  matrix3d.hpp  matrix_factory.hpp  matrix_generators.hpp  matrix_multiplication.hpp  moving_average.hpp  numerical_constants.hpp  output_operators.hpp  padding.hpp  padding_view.hpp  page_and_row_and_column_headers.hpp  polymorphic_matrix.hpp  (+23 more)
python_tests/: CMakeLists.txt  test_python_bindings.cpp
src/: stb_image_wrapper.cpp
tests/: CMakeLists.txt  test_2d_matrix_arithmetic_operations.cpp  test_augmentation.cpp  test_csv_matrix.cpp  test_data_sampling.cpp  test_database_matrix.cpp  test_database_matrix2.cpp  test_downsampling.cpp  test_eigen_matrix_interface.cpp  test_files_utils.cpp  test_image_matrix_image_loading.cpp  test_lttb_downsampling.cpp  test_padding.cpp  test_page_and_row_and_column_header_names.cpp  test_polymorphic_matrix_container.cpp  test_polymorphic_wrappers.cpp  test_python_bindings.cpp  test_reverse_view.cpp  test_roi.cpp  test_selectors_and_roi.cpp  test_simple_data_wrappers.cpp  test_sorting.cpp  test_string_to_number_conversion.cpp  test_triangle_bucket_downsampling.cpp
toolchains/: mingw64-toolchain.cmake  toolchain.cmake
